[gd_scene load_steps=13 format=2]

[ext_resource path="res://Game/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Tiles.png" type="Texture" id=2]
[ext_resource path="res://Game/PlayerController.gd" type="Script" id=3]
[ext_resource path="res://Game/UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI_Theme.tres" type="Theme" id=5]
[ext_resource path="res://Game/FileSelect.tscn" type="PackedScene" id=6]
[ext_resource path="res://mm28_fullcolor.png" type="Texture" id=7]
[ext_resource path="res://Assets/Spawn_Blue.png" type="Texture" id=8]
[ext_resource path="res://Assets/Spawn_Purple.png" type="Texture" id=9]
[ext_resource path="res://Assets/Spawn_Green.png" type="Texture" id=10]
[ext_resource path="res://Assets/Spawn_Red.png" type="Texture" id=11]

[sub_resource type="TileSet" id=1]
2/name = "Tiles.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 385, 1, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Tiles.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 449, 1, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Tiles.png 4"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 513, 1, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "Tiles.png 5"
5/texture = ExtResource( 2 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 449, 65, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "Tiles.png 6"
6/texture = ExtResource( 2 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 513, 65, 64, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "Tiles.png 7"
7/texture = ExtResource( 2 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 577, 65, 64, 64 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "Spawn_Red.png 8"
8/texture = ExtResource( 11 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 1, 1, 64, 64 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "Spawn_Purple.png 9"
9/texture = ExtResource( 9 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 1, 1, 64, 64 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "Spawn_Green.png 10"
10/texture = ExtResource( 10 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 1, 1, 64, 64 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "Spawn_Blue.png 11"
11/texture = ExtResource( 8 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 1, 1, 64, 64 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0

[node name="Node2D" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 320, 0 )
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 8, 0, 1, 2, 0, 2, 5, 0, 3, 2, 0, 4, 5, 0, 5, 2, 0, 6, 5, 0, 7, 2, 0, 8, 5, 0, 9, 11, 0, 10, 0, 0, 11, 0, 0, 65536, 2, 0, 65537, 5, 0, 65538, 2, 0, 65539, 5, 0, 65540, 2, 0, 65541, 5, 0, 65542, 2, 0, 65543, 5, 0, 65544, 2, 0, 65545, 5, 0, 65547, 0, 0, 131072, 5, 0, 131073, 2, 0, 131074, 5, 0, 131075, 2, 0, 131076, 5, 0, 131077, 2, 0, 131078, 5, 0, 131079, 2, 0, 131080, 5, 0, 131081, 2, 0, 131083, 0, 0, 196608, 2, 0, 196609, 5, 0, 196610, 2, 0, 196611, 5, 0, 196612, 2, 0, 196613, 5, 0, 196614, 2, 0, 196615, 5, 0, 196616, 2, 0, 196617, 5, 0, 196619, 0, 0, 262144, 5, 0, 262145, 2, 0, 262146, 5, 0, 262147, 2, 0, 262148, 4, 0, 262149, 4, 0, 262150, 5, 0, 262151, 2, 0, 262152, 5, 0, 262153, 2, 0, 262155, 0, 0, 327680, 2, 0, 327681, 5, 0, 327682, 2, 0, 327683, 5, 0, 327684, 4, 0, 327685, 4, 0, 327686, 2, 0, 327687, 5, 0, 327688, 2, 0, 327689, 5, 0, 327691, 0, 0, 393216, 5, 0, 393217, 2, 0, 393218, 5, 0, 393219, 2, 0, 393220, 5, 0, 393221, 2, 0, 393222, 5, 0, 393223, 2, 0, 393224, 5, 0, 393225, 2, 0, 393227, 0, 0, 458752, 2, 0, 458753, 5, 0, 458754, 2, 0, 458755, 5, 0, 458756, 2, 0, 458757, 5, 0, 458758, 2, 0, 458759, 5, 0, 458760, 2, 0, 458761, 5, 0, 458763, 0, 0, 524288, 5, 0, 524289, 2, 0, 524290, 5, 0, 524291, 2, 0, 524292, 5, 0, 524293, 2, 0, 524294, 5, 0, 524295, 2, 0, 524296, 5, 0, 524297, 2, 0, 589824, 10, 0, 589825, 5, 0, 589826, 2, 0, 589827, 5, 0, 589828, 2, 0, 589829, 5, 0, 589830, 2, 0, 589831, 5, 0, 589832, 2, 0, 589833, 9, 0, 655360, 0, 0, 655371, 0, 0, 720896, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0 )

[node name="PlayerController" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="TurnTimer" type="Timer" parent="PlayerController"]
wait_time = 6.0

[node name="PlayerOne" parent="PlayerController" instance=ExtResource( 1 )]
visible = false
animation = "RWI"

[node name="PlayerTwo" parent="PlayerController" instance=ExtResource( 1 )]
visible = false
animation = "RWI"

[node name="PlayerThree" parent="PlayerController" instance=ExtResource( 1 )]
visible = false
animation = "RWI"

[node name="PlayerFour" parent="PlayerController" instance=ExtResource( 1 )]
visible = false
animation = "RWI"

[node name="Logo" type="TextureRect" parent="PlayerController"]
visible = false
margin_left = 340.0
margin_top = -18.0
margin_right = 940.0
margin_bottom = 582.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" parent="." instance=ExtResource( 4 )]
margin_right = 1282.0
margin_bottom = 642.0
theme = ExtResource( 5 )

[node name="Node" type="Node" parent="."]

[node name="FileSelect" parent="Node" instance=ExtResource( 6 )]

[connection signal="forced_pause" from="PlayerController" to="UI" method="_on_PlayerController_forced_pause"]
[connection signal="timeout" from="PlayerController/TurnTimer" to="PlayerController" method="_on_Timer_timeout"]
[connection signal="pause_toggled" from="UI" to="PlayerController" method="_on_UI_pause_toggled"]
[connection signal="timeline_changed" from="UI" to="PlayerController" method="_on_UI_timeline_changed"]
[connection signal="timeline_interaction" from="UI" to="PlayerController" method="_on_UI_timeline_interaction"]
[connection signal="file_loaded" from="Node/FileSelect" to="PlayerController" method="_on_FileSelect_file_loaded"]
